--- a/app/views/authorizations/register.erb
+++ b/app/views/authorizations/register.erb
@@ -1,15 +1,16 @@
-<form class="pure-form pure-form-stacked" method="post" action="/">
+<form class="pure-form pure-form-stacked" method="post" action="/register">
   <fieldset>
   <legend>Register</legend>
 
     <label for="email">Email</label>
     <input id="email" type="email" placeholder="Email">
-    
+
     <label for="username">Username</label>
     <input id="username" type="username" placeholder="Username">
 
     <label for="password">Password</label>
     <input id="password" type="password" placeholder="Password">
+
     <label for="remember" class="pure-checkbox">
       <input id="remember" type="checkbox"> Remember me
     </label>
