--- a/app/views/authorizations/register.erb
+++ b/app/views/authorizations/register.erb
@@ -3,13 +3,13 @@
   <legend>Register</legend>
 
     <label for="email">Email</label>
-    <input id="email" type="email" placeholder="Email">
+    <input name="user[email]" id="email" type="email" placeholder="Email">
 
     <label for="username">Username</label>
-    <input id="username" type="username" placeholder="Username">
+    <input name="user[user_name]"id="username" type="username" placeholder="Username">
 
     <label for="password">Password</label>
-    <input id="password" type="password" placeholder="Password">
+    <input name="user[password]" id="password" type="password" placeholder="Password">
 
     <label for="remember" class="pure-checkbox">
       <input id="remember" type="checkbox"> Remember me
