--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -6,26 +6,11 @@
   <%= js :application %>
 </head>
 <body>
-<%= yield %>
-
-
 <div id="menu">
     <div class="pure-menu">
         <a class="pure-menu-heading" href="/">CARfetch</a>
-        <ul class="pure-menu-list">
-          
-            <li class="pure-menu-item">
-                <a href="/login" class="pure-menu-link">Login</a>
-            </li>
-          
-            <li class="pure-menu-item">
-                <a href="/register" class="pure-menu-link">Register</a>
-            </li>
-          
-            <li class="pure-menu-item menu-item-divided">
-                <a href="/logout" class="pure-menu-link">Logout</a>
-            </li>
-          
+        <ul class="pure-menu-list">        
+
             <li class="pure-menu-item">
                 <a href="/about" class="pure-menu-link">About</a>
             </li>
@@ -33,35 +18,29 @@
             <li class="pure-menu-item">
                 <a href="/contact" class="pure-menu-link">Contact</a>
             </li>
+
+            <% if is_logged_in? %>
+
+            <li class="pure-menu-item">
+                <a href="/logout" class="pure-menu-link"><%= @current_user.user_name %></a>
+            </li>
+
+            <li class="pure-menu-item">
+                <a href="/logout" class="pure-menu-link">Logout</a>
+            </li>
+
+            <% else %>
+
+            <li class="pure-menu-item">
+                <a href="/login" class="pure-menu-link">Login</a>
+            </li>
+
+            <% end %>
         </ul>
     </div>
 </div>
-
-<!-- <div class="pure-menu width=50%">
-    <ul class="pure-menu-list"> -->
-        <!-- <li class="pure-menu-item pure-menu-selected"><a href="#" class="pure-menu-link">Flickr</a></li> -->
-       <!--  <li class="pure-menu-item"><a href="#" class="pure-menu-link">Login</a></li>
-        <li class="pure-menu-item"><a href="#" class="pure-menu-link">Register</a></li>
-        <li class="pure-menu-item"><a href="#" class="pure-menu-link">Logout</a></li>
-        <li class="pure-menu-item"><a href="#" class="pure-menu-link">About</a></li>
-        <li class="pure-menu-item"><a href="#" class="pure-menu-link">Contact</a></li>
-        <li class="pure-menu-item pure-menu-has-children">
-            <a href="#" id="menuLink1" class="pure-menu-link">More</a>
-            <ul class="pure-menu-children">
-                <li class="pure-menu-item"><a href="#" class="pure-menu-link">Autos</a></li>
-                <li class="pure-menu-item"><a href="#" class="pure-menu-link">Flickr</a></li>
-                <li class="pure-menu-item pure-menu-has-children">
-                    <a href="#" id="menuLink1" class="pure-menu-link">Even More</a>
-                    <ul class="pure-menu-children">
-                        <li class="pure-menu-item"><a href="#" class="pure-menu-link">Foo</a></li>
-                        <li class="pure-menu-item"><a href="#" class="pure-menu-link">Bar</a></li>
-                        <li class="pure-menu-item"><a href="#" class="pure-menu-link">Baz</a></li>
-                    </ul>
-                </li>
-            </ul>
-        </li>
-    </ul>
-</div> -->
-
+<main>
+    <%= yield %>
+</main>
 </body>
 </html>
