--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -22,16 +22,26 @@
             <% if is_logged_in? %>
 
             <li class="pure-menu-item">
-                <a href="/logout" class="pure-menu-link"><%= @current_user.user_name %></a>
+                <a href="/users/<%= @current_user.id %>" class="pure-menu-link"><%= @current_user.user_name %></a>
+            </li>
+
+            <li class="pure-menu-item">
+                <a href="/cars" class="pure-menu-link">Cars</a>
             </li>
 
             <li class="pure-menu-item">
                 <a href="/logout" class="pure-menu-link">Logout</a>
             </li>
 
+           
+
             <% else %>
 
             <li class="pure-menu-item">
+                <a href="/register" class="pure-menu-link">Register</a>
+            </li>
+
+             <li class="pure-menu-item">
                 <a href="/login" class="pure-menu-link">Login</a>
             </li>
 
