--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -26,11 +26,11 @@
             </li>
 
             <li class="pure-menu-item pure-menu-has-children pure-menu-allow-hover">
-                <a href="#" id="menuLink1" class="pure-menu-link">Cars</a>
+                <a href="/cars" id="menuLink1" class="pure-menu-link">Cars</a>
                 <ul class="pure-menu-children">
-                <li class="pure-menu-item"><a href="#" class="pure-menu-link">Add Car</a></li>
-                    <li class="pure-menu-item"><a href="#" class="pure-menu-link">Edit Car</a></li>
-                    <li class="pure-menu-item"><a href="#" class="pure-menu-link">Delete Car</a></li>
+                <li class="pure-menu-item"><a href="/cars/new" class="pure-menu-link">Add Car</a></li>
+                    <li class="pure-menu-item"><a href="/#{@current_car}/:id" class="pure-menu-link">Edit Car</a></li>
+                    <li class="pure-menu-item"><a href="/cars" class="pure-menu-link">Delete Car</a></li>
                 </ul>
             </li>
 
