added views folder

--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -17,7 +17,7 @@
                     <li class="pure-menu-item"><a href="/cars/new" class="pure-menu-link">Aston Martin</a></li>
                     <li class="pure-menu-item"><a href="/#{@current_car}/:id" class="pure-menu-link">Bentley</a></li>
                     <li class="pure-menu-item"><a href="/cars" class="pure-menu-link">BMW</a></li>
-                    <li class="pure-menu-item"><a href="/cars" class="pure-menu-link">Ferarri</a></li>
+                    <li class="pure-menu-item"><a href="/cars" class="pure-menu-link">Ferrari</a></li>
                     <li class="pure-menu-item"><a href="/cars" class="pure-menu-link">Porsche</a></li>
                     <li class="pure-menu-item"><a href="/cars" class="pure-menu-link">Maserati</a></li>
                     <li class="pure-menu-item"><a href="/cars" class="pure-menu-link">Lotus</a></li>
@@ -36,9 +36,7 @@
             <li class="pure-menu-item pure-menu-has-children pure-menu-allow-hover">
                 <a href="/cars" id="menuLink1" class="pure-menu-link">Cars</a>
                 <ul class="pure-menu-children">
-                <li class="pure-menu-item"><a href="/cars/new" class="pure-menu-link">Add Car</a></li>
-                    <li class="pure-menu-item"><a href="/#{@current_car}/:id" class="pure-menu-link">Edit Car</a></li>
-                    <li class="pure-menu-item"><a href="/cars" class="pure-menu-link">Delete Car</a></li>
+                <li class="pure-menu-item"><a href="/cars/new" class="pure-menu-link">Add Car</a></li>   
                 </ul>
             </li>
 
