able to add car images

--- a/app/views/cars/new.erb
+++ b/app/views/cars/new.erb
@@ -14,10 +14,10 @@
     <input name="car[year]" id="year" type="year" placeholder="Year">
     
     <label for="price">Price</label>
-    <input name="car[price]" id="price" type="price" placeholder="Price">
+    <input name="car[price]" id="price" type="integer" placeholder="Price">
 
     <label for="image">Image</label>
-    <input name="car[image]" placeholder="Image URL">
+    <input name="car[image]" id="image" placeholder="Image URL">
 
     <button type="add_car" class="pure-button pure-button-primary">Add Car</button>
   </fieldset>
