--- a/app/views/dealers/index.erb
+++ b/app/views/dealers/index.erb
@@ -3,9 +3,7 @@
 <ul>
 <% @cars.each do |car| %>
   <li><%= car.model %></li>
-  <img src="<%= car.image %>">
-  <img src="http://www.fillmurray.com/300/300">
-  
+  <img src="<%= car.image %>" width="300">  
   <a href="/cars/<%= car.id %>/edit">Edit</a>
   <a href="/cars/<%= car.id %>/edit">Delete</a>
 <% end %>
