dealer and user have different paths

--- a/app/views/users/show.erb
+++ b/app/views/users/show.erb
@@ -2,6 +2,6 @@
 
 <ul>
   <% current_user.cars.each do |car| %>
-  <li><%= car.model %></li>
+  <li><img src="<%= car.image %>" width="400"></li>
 <% end %>
 </ul>
