--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -15,8 +15,9 @@
             <% if is_logged_in? %>
 
                 <li class="pure-menu-item">
-                    <a href="/users/<%= current_user.id %>" class="pure-menu-link"><%= current_user.user_name %></a>
+                    <a href="/users/<%= current_user.id %>" class="pure-menu-link"><%= current_user.user_name %>'s Wishlist</a>
                 </li>
+                
 
             <% if is_dealer? %>
                 <li class="pure-menu-item pure-menu-has-children pure-menu-allow-hover">
@@ -40,15 +41,11 @@
                         <li class="pure-menu-item"><a href="/cars" class="pure-menu-link">Jaguar</a></li>
                     </ul>
                 </li>
+            </li>
 
-
-                    <% end %>  
-                    </ul>
-                </li>
-
-                <li class="pure-menu-item">
-                    <a href="/logout" class="pure-menu-link">Logout</a>
-                </li>
+            <% end %>  
+                   
+           
 
             <% else %>
 
@@ -70,6 +67,7 @@
 
             <% end %>
         </ul>
+
     </div>
 </div>
 <main>
