--- a/app/views/dealers/edit.erb
+++ b/app/views/dealers/edit.erb
@@ -1,4 +1,4 @@
-<h1>EDIT CAR <%= @car.make%> <%= @car.model %> </h1>
+<h1>EDIT CAR <%= Car.make %> <%= Car.model %> </h1>
 
 
 <form class="pure-form pure-form-stacked" method="post" action="/cars">
