--- a/app/views/cars/edit.erb
+++ b/app/views/cars/edit.erb
@@ -1,7 +1,8 @@
 <h1>EDIT CAR <%= @car.make%> <%= @car.model %> </h1>
 
 
-<form class="pure-form pure-form-stacked" method="post" action="/cars">
+<form class="pure-form pure-form-stacked" method="post" action="/cars/<%= @car.id %>">
+<input type="hidden" name="_method" value="put">
   <fieldset>
   <legend>Register</legend>
 
