--- a/app/views/cars/index.erb
+++ b/app/views/cars/index.erb
@@ -3,7 +3,9 @@
 <ul>
 <% @cars.each do |car| %>
   <li><%= car.model %></li>
-  <img src="<%= car.image %>" width="300">
+  <a href="/cars/<%= car.id %>"> 
+    <img src="<%= car.image %>" width="300"> 
+  </a>
   
   <a href="/cars/<%= car.id %>/edit">Edit</a>
   <a href="/cars/<%= car.id %>/edit">Delete</a>
