--- a/app/views/dealers/edit.erb
+++ b/app/views/dealers/edit.erb
@@ -1,4 +1,5 @@
-<h1>EDIT CAR <%= Car.make %> <%= Car.model %> </h1>
+<h1>Edit Car</h1>
+<h2> <%= Car.make %> <%= Car.model %> </h2>
 
 
 <form class="pure-form pure-form-stacked" method="post" action="/cars">
