dealer can delete cars

--- a/app/views/cars/edit.erb
+++ b/app/views/cars/edit.erb
@@ -21,6 +21,6 @@
     <label for="image">Image</label>
     <input name="car[image]" placeholder="Image URL" value="<%= @car.image %>">
 
-    <button type="add_car" class="pure-button pure-button-primary">Add Car</button>
+    <button type="add_car" class="pure-button pure-button-primary">Save Edit</button>
   </fieldset>
 </form>
