--- a/app/views/cars/show.erb
+++ b/app/views/cars/show.erb
@@ -8,7 +8,7 @@
   </li>
   <li> Year: <%= @car.year %> </li>
   <li> Price: <%= @car.price %> </li>
-  <li> Dealer: <%= @car.dealer.name %> </li>
+  <li> Dealer: <%= @car.dealer %> </li>
 </ul>
 
 
