email is sent once car is added to wishlist

--- a/app/views/cars/index.erb
+++ b/app/views/cars/index.erb
@@ -21,6 +21,11 @@
   <form method="post" action="/cars/<%= car.id %>/add-to-wishlist">
     <input type="submit" name="_method" value="Add to wishlist"></input>
   </form>
+
+<!--   <form method="post" action="/cars/<%= car.id %>/add-to-wishlist">
+    <input type="submit" name="_method" value="Contact Seller"></input>
+  </form> -->
+
   <% end %>
 <% end %>
 </ul>
