link added to cars in wishlist

--- a/app/views/users/show.erb
+++ b/app/views/users/show.erb
@@ -2,7 +2,10 @@
 
 <ul>
   <% current_user.cars.each do |car| %>
-  <li><img src="<%= car.image %>" width="400"></li>
+  <a href="/cars/<%= car.id %>"><li><img src="<%= car.image %>" width="400"></li></a>
 <% end %>
+
+<form method="post" action="/users/<%= current_user.id %>/delete">
+  <input type="submit" name="_method" value="DELETE">
   
 </ul>
