able to see dealer's name in menu. Routes fixed

--- a/app/views/cars/show.erb
+++ b/app/views/cars/show.erb
@@ -7,8 +7,8 @@
     </a>
   </li>
   <li> Year: <%= @car.year %> </li>
-  <li> Price: <%= @car.price %> </li>
-  <li> Dealer: <%= @car.dealer %> </li>
+  <li> Price: £ <%= @car.price %> </li>
+  <li> Dealer: <%= @car.user_name %> </li>
 </ul>
 
 
