--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -6,6 +6,10 @@
   <%= js :application %>
 </head>
 <body>
+
+
+
+
 <div id="menu">
     <div class="pure-menu">
         <a class="pure-menu-heading" href="/">CARfetch</a>
@@ -13,6 +17,10 @@
 
 
             <% if is_logged_in? && is_dealer? %>
+
+                <li class="pure-menu-item">
+                    <a href="/cars" class="pure-menu-link"> <%= @current_user.user_name %>'s Cars </a>
+                </li>
 
                 <li class="pure-menu-item pure-menu-has-children pure-menu-allow-hover">
                     <a href="/cars" id="menuLink1" class="pure-menu-link">Cars</a>
@@ -26,17 +34,20 @@
                     <a href="/logout" class="pure-menu-link">Logout</a>
                 </li>
 
+                
+
             <% elsif is_logged_in? %>
 
                 <li class="pure-menu-item">
-                    <a href="/users/<%= current_user.id %>" class="pure-menu-link"><%= current_user.user_name %>'s Wishlist</a>
+                    <a href="/users/<%= current_user.id %>/wishlist" class="pure-menu-link"><%= current_user.user_name %>'s Wishlist</a>
                 </li>
 
                 <li class="pure-menu-item pure-menu-has-children pure-menu-allow-hover">
                     <a href="/cars" id="menuLink1" class="pure-menu-link">Cars</a>
                     <ul class="pure-menu-children">
-                        <li class="pure-menu-item"><a href="/cars/new" class="pure-menu-link">Aston Martin</a></li>
-                        <li class="pure-menu-item"><a href="/#{@current_car}/:id" class="pure-menu-link">Bentley</a></li>
+
+                        <li class="pure-menu-item"><a href="/cars" class="pure-menu-link">Aston Martin</a></li>
+                        <li class="pure-menu-item"><a href="/cars" class="pure-menu-link">Bentley</a></li>
                         <li class="pure-menu-item"><a href="/cars" class="pure-menu-link">BMW</a></li>
                         <li class="pure-menu-item"><a href="/cars" class="pure-menu-link">Ferrari</a></li>
                         <li class="pure-menu-item"><a href="/cars" class="pure-menu-link">Porsche</a></li>
