--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -19,7 +19,7 @@
             <% if is_logged_in? && is_dealer? %>
 
                 <li class="pure-menu-item">
-                    <a href="/cars" class="pure-menu-link"> <%= @current_user.user_name %>'s Cars </a>
+                    <a href="/" class="pure-menu-link"> <%= @current_user.user_name.capitalize %>'s Cars </a>
                 </li>
 
                 <li class="pure-menu-item pure-menu-has-children pure-menu-allow-hover">
