--- a/app/views/cars/show.erb
+++ b/app/views/cars/show.erb
@@ -8,7 +8,7 @@
   </li>
   <li> Year: <%= @car.year %> </li>
   <li> Price: £ <%= @car.price %> </li>
-  <li> Dealer: <%= @car.user_name %> </li>
+  <li> Dealer Contact: <a href="http://www.gmail.com"><%= @car.dealer.email %></a> </li>
 </ul>
 
 
