--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -2,7 +2,6 @@ body {
   font-family: disco;
   font-weight: bold;
   background: #F8F8F8;
-  margin-right: 160px;
   height: 100%;
 }
 
@@ -32,23 +31,37 @@ li {
 }
 
 .container {
-  width: 80%;
+  width: 85%;
+  margin-left: 18%;
 }
 
 #menu {
+  position: fixed;
   background: #2D3142;
-  width: 20%;
+  width: 15%;
   height: 100vh;
 }
 
-#pure-menu{
-
-}
 
 h1 {
   text-align: center;
 }
 
-div{
-  float: left
+
+.centered {
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%,-50%);
+}
+
+.card {
+  margin: 5px;
+  text-align: center;
+  display: inline-block;
+}
+
+
+section.home .cars{
+  margin-left: 140px;
 }
