changed new car legend

--- a/app/views/cars/new.erb
+++ b/app/views/cars/new.erb
@@ -2,7 +2,7 @@
 
 <form class="pure-form pure-form-stacked" method="post" action="/cars">
   <fieldset>
-  <legend>Register</legend>
+  <legend></legend>
 
     <label for="make">Make</label>
     <input name="car[make]" id="make" type="make" placeholder="Make">
