--- a/app/views/cars/new.erb
+++ b/app/views/cars/new.erb
@@ -1,24 +1,29 @@
 <h1>ADD NEW CAR</h1>
 
-<form class="pure-form pure-form-stacked" method="post" action="/cars">
-  <fieldset>
-  <legend></legend>
+<div class="pure-g">
+  <li class="pure-u-1-">
+    <form class="pure-form pure-form-stacked" class="new-car" method="post" action="/cars">
+      <fieldset>
 
-    <label for="make">Make</label>
-    <input name="car[make]" id="make" type="make" placeholder="Make">
+      <legend></legend>
 
-    <label for="model">Model</label>
-    <input name="car[model]"id="model" type="model" placeholder="Model">
+        <label for="make">Make</label>
+        <input name="car[make]" id="make" type="make" placeholder="Make">
 
-    <label for="year">Year</label>
-    <input name="car[year]" id="year" type="year" placeholder="Year">
-    
-    <label for="price">Price</label>
-    <input name="car[price]" id="price" type="integer" placeholder="Price">
+        <label for="model">Model</label>
+        <input name="car[model]"id="model" type="model" placeholder="Model">
 
-    <label for="image">Image</label>
-    <input name="car[image]" id="image" placeholder="Image URL">
+        <label for="year">Year</label>
+        <input name="car[year]" id="year" type="year" placeholder="Year">
+        
+        <label for="price">Price</label>
+        <input name="car[price]" id="price" type="integer" placeholder="Price">
 
-    <button type="add_car" class="pure-button pure-button-primary">Add Car</button>
-  </fieldset>
-</form>
+        <label for="image">Image</label>
+        <input name="car[image]" id="image" placeholder="Image URL">
+
+        <button type="add_car" class="pure-button pure-button-primary">Add Car</button>
+      </fieldset>
+    </form>
+  </li>
+</div>
