centered login legend text

--- a/app/views/cars/new.erb
+++ b/app/views/cars/new.erb
@@ -1,7 +1,7 @@
 <h1>ADD NEW CAR</h1>
 
 <div class="pure-g">
-  <li class="pure-u-1-">
+  <li class="pure-u-1-1">
     <form class="pure-form pure-form-stacked" class="new-car" method="post" action="/cars">
       <fieldset>
 
@@ -19,9 +19,10 @@
         <label for="price">Price</label>
         <input name="car[price]" id="price" type="integer" placeholder="Price">
 
-        <label for="image">Image</label>
-        <input name="car[image]" id="image" placeholder="Image URL">
 
+        <label for="image">Image</label>
+        <input name="car[image]" id="image"  placeholder="Image URL">
+        
         <button type="add_car" class="pure-button pure-button-primary">Add Car</button>
       </fieldset>
     </form>
