--- a/app/views/users/show.erb
+++ b/app/views/users/show.erb
@@ -1,4 +1,4 @@
-<h1><%= current_user.user_name %>'s Wishlist</h1>
+<h1><%= current_user.user_name.capitalize %>'s Wishlist</h1>
 
 <ul>
   <% current_user.cars.each do |car| %>
