--- a/app/views/cars/index.erb
+++ b/app/views/cars/index.erb
@@ -1,3 +1,6 @@
+
+
+<section class="all-cars">
 <h1>ALL CARS</h1>
 
 <ul>
@@ -6,11 +9,13 @@
   <a href="/cars/<%= car.id %>"> 
     <img src="<%= car.image %>" width="300"> 
   </a>
+  <li>£ <%= car.price %></li>
   
   <% if is_dealer? %>
  <!--  <a href="/cars/<%= car.id %>/edit">Edit</a> -->
   <form method="post" action="/cars/<%= car.id %>/edit">
     <button type="submit" class="pure-button pure-button-primary">Edit</button>
+  </form>
 
   <form method="post" action="/cars/<%= car.id %>/delete">
     <button type="submit" class="pure-button pure-button-primary">Delete</button>
@@ -31,3 +36,5 @@
   <% end %>
 <% end %>
 </ul>
+</section>
+
