--- a/app/views/cars/index.erb
+++ b/app/views/cars/index.erb
@@ -1,27 +1,33 @@
 
 
 <section class="all-cars">
+
 <h1>ALL CARS</h1>
 
-<ul>
+<div class="all-cars pure-g">  
 <% @cars.each do |car| %>
-  <li><%= car.model %></li>
+  <li class="all-cars pure-u-md-2"><%=car.year%> <%= car.model %></li>
   <li><a href="/cars/<%= car.id %>"> 
     <img src="<%= car.image %>" width="300"> 
   </a></li>
-  <li>£ <%= car.price %></li>
+  <li >£ <%= car.price %></li>
   
   <% if is_dealer? %>
 
  <!--  <a href="/cars/<%= car.id %>/edit">Edit</a> -->
+
+ 
+ <h3><%= @current_user.user_name.capitalize %></h3>
+
  <li>
-  <form method="post" action="/cars/<%= car.id %>/edit">
+  <form method="get" action="/cars/<%= car.id %>/edit">
     <button type="submit" class="pure-button pure-button-primary">Edit</button>
   </form>
 </li>
 
   <li>
     <form method="post" action="/cars/<%= car.id %>/delete">
+      <input type="hidden" name="_method" value="delete">
       <button type="submit" class="pure-button pure-button-primary">Delete</button>
       <!-- <button>Delete</button> -->
     </form>
@@ -41,6 +47,8 @@
 
   <% end %>
 <% end %>
-</ul>
+
+</div>
+
 </section>
 
