fixed form alignemnt for adding a car

--- a/app/views/cars/new.erb
+++ b/app/views/cars/new.erb
@@ -1,7 +1,7 @@
 <h1>ADD NEW CAR</h1>
 
 <div class="pure-g">
-  <li class="pure-u-1-1">
+  <li class="pure-u-1">
     <form class="pure-form pure-form-stacked" class="new-car" method="post" action="/cars">
       <fieldset>
 
@@ -21,10 +21,10 @@
 
 
         <label for="image">Image</label>
-        <input name="car[image]" id="image"  placeholder="Image URL">
+        <input name="car[image]" id="image" type="year"  placeholder="Image URL">
         
-        <button type="add_car" class="pure-button pure-button-primary">Add Car</button>
       </fieldset>
+      <button type="add_car" class="pure-button">Add Car</button>
     </form>
   </li>
 </div>
